# finfoot

./: Cargo.toml
benches/: ode_benchmark.rs
src/: contig.rs  lib.rs  main.rs  ode.rs
src/ode/: dopri5.rs
test_util/: Cargo.toml
test_util/src/: lib.rs
tests/: ode_solutions.py  ode_tests.rs
